# mopadi-user-study

./: .gitignore  README.md  app.py  config.py  pyproject.toml  study_config.json
static/css/: style.css
static/js/: annotate.js
templates/: base.html  index.html  section_complete.html  section_intro.html  study_complete.html  task1.html  task1_complete.html  task2.html
