[project]
name = "mopadiui"
version = "0.1.0"
description = "MOPADI Expert Annotation Platform"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
    "huggingface-hub>=0.22",
    "pillow>=10.0",
    "imagehash>=4.3",
    "numpy>=1.24",
    "gunicorn>=21.0",
    "scipy>=1.15.3",
    "openpyxl>=3.1",
    "pandas>=2.0",
]

[dependency-groups]
dev = []
